# gltf2obj

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gltf2obj/: gltf2obj.cpp  gltf2obj.h  gltf2obj.py  main.cpp  simpleLog.cpp  simpleLog.h
scripts/: gltf2obj_batch.py  obj2gltf_batch.py
